<resources>
    <string name="app_name">trackandtravel</string>
    <string name="button_deleteHillfort">Delete</string>

    <string name="menu_addHillfort">Save</string>
    <string name="title_activity_map"> Map </string>

    <string name="login_unsuccessful1">Please enter a email or password</string>
    <string name="login_unsuccessful">login unsuccessful</string>
    <string name="register_successful">Registration successful</string>
    <string name="enter_register_detail"> Please fill out both fields</string>
    <string name="title_activity_hillfort_maps">Map of all Routes</string>
    <string name="title_activity_login"> Signup/Login</string>

    <string name="menu_showMap">Show Routes</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_add">Add</string>


    <string name="routeStart">Route Start</string>
    <string name="routeStops">Route Stops</string>
    <string name="routeEnd">Route End</string>


    <string name="select_route_image">Select hillfort image</string>
    <string name="route_favourites">Show Favourites</string>
    <string name="menu_home">Home</string>
    <string name="button_addImage">  Add Image </string>


    <string name="hint_routeTitle">Route Title</string>
    <string name="hint_firststop">First Bus Stop</string>
    <string name="hint_laststop">Last Bus Stop</string>


    <string name="button_location">Add Bus Stop</string>
    <string name="route_favourite">Favourite</string>
    <string name="menu_mapup"> UP </string>

    <string name="change_route_image">Change route image</string>
    <string name="enter_route_title">Please enter a bus number</string>

    <string name="info">For more information contact us at TrackAndTravel@gmail.com</string>
</resources>
