<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="assignment.trackandtravel.main.MainApp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="-16dp">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAdd1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/colorPrimary" />
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout"
            android:layout_marginTop="0dp"
            android:fillViewport="true">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignTop="@+id/appBarLayout"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="0dp">

                <TextView
                    android:id="@+id/firststop1"
                    android:layout_width="260dp"
                    android:layout_height="62dp"
                    android:layout_marginStart="108dp"
                    android:hint="@string/hint_firststop"
                    android:inputType="none"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/BusNumber1" />

                <TextView
                    android:id="@+id/firststopname"
                    android:layout_width="260dp"
                    android:layout_height="62dp"
                    android:hint="@string/hint_firststop"
                    android:inputType="none"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/BusNumber1" />

                <TextView
                    android:id="@+id/laststop1"
                    android:layout_width="256dp"
                    android:layout_height="58dp"
                    android:layout_marginStart="108dp"
                    android:hint="@string/hint_laststop"
                    android:inputType="none"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/firststop1" />

                <TextView
                    android:id="@+id/laststopname"
                    android:layout_width="109dp"
                    android:layout_height="58dp"
                    android:hint="@string/hint_laststop"
                    android:inputType="none"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/firststop1" />

                <TextView
                    android:id="@+id/BusNumberName"
                    android:layout_width="109dp"
                    android:layout_height="54dp"
                    android:layout_marginTop="20dp"
                    android:autofillHints=""
                    android:hint="@string/hint_routeTitle"
                    android:inputType="none"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/BusImage1">

                    <requestFocus />
                </TextView>


                <TextView
                    android:id="@+id/BusNumber1"
                    android:layout_width="283dp"
                    android:layout_height="54dp"
                    android:layout_marginStart="108dp"
                    android:layout_marginTop="20dp"
                    android:autofillHints=""
                    android:hint="@string/hint_routeTitle"
                    android:inputType="none"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/BusImage1">

                    <requestFocus />
                </TextView>

                <ImageView
                    android:id="@+id/BusImage1"
                    android:layout_width="393dp"
                    android:layout_height="150dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@mipmap/ic_launcher" />


                <com.google.android.gms.maps.MapView
                    android:id="@+id/mapView1"
                    android:layout_width="363dp"
                    android:layout_height="162dp"
                    android:layout_marginStart="180dp"
                    android:layout_marginEnd="181dp"
                    android:layout_marginBottom="136dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/laststop1"

                    app:layout_constraintVertical_bias="1.0" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>